--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -109,6 +109,17 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: space-between;
 }
+.link-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+.resume-link a {
+    display: block;
+    color: #3ab4fa;
+    margin-bottom: 6px;
+    text-decoration: none;
+    font-weight: bold;
+}
 @media (min-width: 992px) {
     .wrapper {
         width: 960px;
